# hopeit.agents

./: Makefile  pyproject.toml
.github/workflows/: hopeit-agents-pypi-publishing.yml  hopeit-agents-qa.yml  hopeit-agents-test-pypi-publishing.yml
examples/apps/example-agents/: pyproject.toml
examples/apps/example-agents/config/: app-config.json
examples/apps/example-agents/config/agents/: skills-agent-prompt.md
examples/apps/example-agents/src/hopeit_agents/example_agents/: models.py
examples/apps/example-agents/src/hopeit_agents/example_agents/agents/: skills_agent.py
examples/plugins/example-skills/: README.md  pyproject.toml
examples/plugins/example-skills/config/: plugin-config.json
examples/plugins/example-skills/src/hopeit_agents/example_skills/: __init__.py  models.py
examples/plugins/example-skills/src/hopeit_agents/example_skills/skills/data_generation/: generate_random.py
examples/plugins/example-skills/src/hopeit_agents/example_skills/skills/math/: __init__.py  sum_two_numbers.py
examples/plugins/example-skills/test/: conftest.py  test_generate_random.py  test_sum_two_numbers.py
examples/plugins/example-tool/: pyproject.toml
plugins/agents/agent-toolkit/: pyproject.toml
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/app/steps/: agent_skills_loop.py
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/skills/: agent_skills.py
plugins/agents/model-client/: pyproject.toml
plugins/agents/model-client/src/hopeit_agents/model_client/: models.py  settings.py
plugins/agents/skills/: README.md  pyproject.toml
plugins/agents/skills/config/: plugin-config.json
plugins/agents/skills/src/hopeit_agents/skills/: api.py  models.py  registry.py  runner.py  setup.py
plugins/mcp/mcp-client/: pyproject.toml
plugins/mcp/mcp-client/src/hopeit_agents/mcp_client/: models.py
plugins/mcp/mcp-server/: pyproject.toml
