[project]
name = "hopeit_agents.workspace"
version = "0.1.1"

requires-python = ">=3.11"

description = "Workspace for hopeit_agents plugins and examples"
license = "Apache-2.0"
authors = [
    { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Framework :: AsyncIO",
]
dynamic = ["readme"]
dependencies = [
    "hopeit-agents.agent-toolkit",
    "hopeit-agents.skills",
    "hopeit-agents.model-client",
    "hopeit-agents.mcp-server",
    "hopeit-agents.mcp-client",
    "hopeit-agents-example-agents",
    "hopeit-agents-example-skills",
    "hopeit-agents-example-tool",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.0.0,<1.1",
    "pytest-mock>=3.15.1",
    "coverage>=7.13.4",
    "ruff>=0.15.2",
    "isort>=8.0.0",
    "aiohttp>=3.13.3",
    "types-requests>=2.32.4",
    "types-aiofiles>=25.1.0",
    "types-redis>=4.6.0",
    "uvloop>=0.22.1",
    "mcp[cli]>=1.26.0",
]

[tool.uv.sources]
hopeit-agents-agent-toolkit = { path = "plugins/agents/agent-toolkit" }
hopeit-agents-skills = { path = "plugins/agents/skills" }
hopeit-agents-model-client = { path = "plugins/agents/model-client" }
hopeit-agents-mcp-server = { path = "plugins/mcp/mcp-server" }
hopeit-agents-mcp-client = { path = "plugins/mcp/mcp-client" }
hopeit-agents-example-tool = { path = "examples/plugins/example-tool" }
hopeit-agents-example-skills = { path = "examples/plugins/example-skills" }
hopeit-agents-example-agents = { path = "examples/apps/example-agents" }

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = true
allow_untyped_decorators = true
enable_error_code = ["truthy-bool", "redundant-expr"]
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
src = [
    "plugins/agents/agent-toolkit/src",
    "plugins/agents/skills/src",
    "plugins/agents/model-client/src",
    "plugins/mcp/mcp-server/src",
    "plugins/mcp/mcp-client/src",
    "examples/apps/example-agents/src",
    "examples/plugins/example-skills/src",
    "examples/plugins/example-tool/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/test/**/*.py" = [
    "D",
    "S101",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG005",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN202",
    "PYI034",
]

[tool.ruff.lint.extend-per-file-ignores]
"engine/test/**/test_*.py" = ["F401", "F811"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
