[project]
name = "hopeit-agents.mcp-server"
version = "0.1.1b2"

description = "Hopeit Agents: Model Context Protocol server"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.29.0",
    "mcp>=1.26.0",
    "click>=8.3.1",
]

license = "Apache-2.0"
authors = [
    { name = "hopeit-agents contributors", email = "opensource@hopeit.com.ar" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.agents"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[project.scripts]
hopeit_mcp_server = "hopeit_agents.mcp_server.cli.server:server"
